# Distibuted-Systems-2023

./: .gitignore  CMakeLists.txt
pa1/: CMakeLists.txt  ipc.c  main  main.c
pa2/: CMakeLists.txt  ipc.c  main.c  pipes.c  print_history.c
pa3/: CMakeLists.txt  lamport.h  main.c  pipes.h
pa4/: .gitignore  CMakeLists.txt  lamport.h  main.c  pa2345.h
pa5/: CMakeLists.txt  ipc.c  lamport.c  list.c  list.h  main.c  stack.c  stack.h
